--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
                         <li>
                             <a href="/blog">Blog</a>
                         </li>
+                        <li>
+                            <a href="/page/usecases">Use Cases</a>
+                        </li>
                     </ul>
                     
                 </div>
